--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 
 <body>
   <header class="group">
-    <div class="intro">
       <h1>Out of the Brew</h1>
       <h2>Cafe - Bar - Gallery - Garden</h2>
-      <p>New Cross arts cafe opening soon serving Robusta bean coffee, locally sourced food and craft ale with beer garden.</p>
+      <p>New Cross arts cafe opening soon serving Robusta bean coffee, delicious food and craft ale with beer garden.</p>
 
     <!-- Begin MailChimp Signup Form -->
     <div id="mc_embed_signup">
@@ -44,7 +43,6 @@
       </a>
 
     <!--End mc_embed_signup-->
-  </div>
   </header>
 </body>
 </html>
